llvm-toolchain-3.4 (1:3.4~+rc2-2) unstable; urgency=low

  * Add the Ocaml ABI dependency (Closes: #731344)

 --

llvm-toolchain-3.4 (1:3.4~+rc2-1) unstable; urgency=low

  * New testing upstream release
  * 0047-version-name.diff ocamldoc.diff removed (applied upstream)
  * r600 is now compiled by default (remove the configure arg)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 03 Dec 2013 10:25:59 +0100

llvm-toolchain-3.4 (1:3.4~+rc1-3) unstable; urgency=low

  * Remove the usage of --with-c-include-dirs, --with-cxx-include-root,
    --with-cxx-include-arch and --with-cxx-include-64bit-dir
    It was blocking the automatic detection of the path of clang.
    In particular in the context of the usage of -target.
    However, it does not completely fix the detection of the i386 C++ path.
    See the next item.
    (Closes: #729933)
  * Bring back the path to libstdc++ under i386. Still not fixed upstream
    (Closes: #730857)
  * Define also MAXPATHLEN in Path.inc for HURD.
  * Silent the trillion of warnings in the LLDB Python wrapper (swig generated)
    See silent-swig-warning.diff
  * Silent some i386 tests failing (it is expected)
    See silent-MCJIIT-tests.diff
  * Make lldb 3.4 also conflict with 3.5 (Closes: #730163)
  * Make python-clang 3.4 also conflict with 3.5 (Closes: #730164)
  * Port LLVM to mips64el. Thanks to YunQiang Su. Initially done for
    3.3 and ported on the 3.4 (Closes: #730808)
  * If we get an unexpected pass, do not break the tests
    do-not-fail-on-unexpected-pass.diff (I am disabling some tests)
  * Fix the path detection of the objective h headers.
  * Also add usr/lib/llvm-3.4/lib/clang/3.4/include => 
    usr/lib/clang/3.4/include symlink to simplify the path detection

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 01 Dec 2013 17:49:46 +0100

llvm-toolchain-3.4 (1:3.4~+rc1-2) unstable; urgency=low

  * Force the build to gcc 4.8... gcc 4.6 used on some Debian archs does not
    support some C++ features.