@@ -103,7 +103,11 @@ else
 endif
 
 LLDB_ENABLE=yes
-ifeq ($(DEB_HOST_ARCH),hurd-i386)
+# hurd has threading issues
+# mips* fails with "undefined references to `__atomic_load_8'"
+ifneq (,$(findstring $(DEB_HOST_ARCH),$(LLDB_DISABLE_ARCHS)))
+# Disable LLDB for this arch.
+
         LLDB_ENABLE=no
 endif
 
