@@ -1,6 +1,7 @@
 llvm-toolchain-3.4 (1:3.4~+rc2-2) unstable; urgency=low
 
   * Add the Ocaml ABI dependency (Closes: #731344)
+  * Disable LLDB also for mips & mipsel
 
  --
 
